# namedtuple-table

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  run-tests.yml
src/namedtuple_table/: __init__.py
test/: test.py
test/data/: bad_dogs.tsv  dogs.tsv
